--- a/config.json
+++ b/config.json
@@ -1,12 +1,11 @@
 {
-    "serverPort" : "4000",
-    "serverHost" : "game.fonline2.com",
-    "nickNames" : ["Pti4ka", "Mabus", "T-888", "Msh"],
-    "botToken" : "XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX",
-    "changeTime" : 600
-    "serverName" : "FOnline 2 Discord Community",
-    "textChannelName" : "Your text channel name here (without #)",
+    "botToken" : "MjIzNzkyMzgwNzE1ODU5OTY4.C3Efrw.KHknGO3YfWVOG-iTbHcr3kmo9kY",
+    "serverName" : "Talon Company",
+    "serverport" : "4000",
+    "serverhost" : "game.fonline2.com",
+    "nicknames" : ["Pti4ka", "Mabus", "T-888", "Msh"],
+    "changetime" : 600
+    "textChannelName" : "flood",
     "voiceChannelName" : "AFK",
     "aliasesFile" : "aliases.json"
 }
-
