--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-    "botToken" : "MjIzNzkyMzgwNzE1ODU5OTY4.C3Efrw.KHknGO3YfWVOG-iTbHcr3kmo9kY",
+    "botToken" : "MjIzNzkyMzgwNzE1ODU5OTY4.C3E9uw.lu1zhm7e3ydcJHCoBKh1YR-QxPg",
     "serverName" : "FOnline2",
     "serverport" : "4000",
     "serverhost" : "game.fonline2.com",
