--- a/config.json
+++ b/config.json
@@ -1,10 +1,10 @@
 {
-    "botToken" : "MjIzNzkyMzgwNzE1ODU5OTY4.C3E9uw.lu1zhm7e3ydcJHCoBKh1YR-QxPg",
+    "botToken" : "=",
     "serverName" : "FOnline2",
     "serverport" : "4000",
     "serverhost" : "game.fonline2.com",
     "nicknames" : ["Pti4ka", "Mabus", "T-888", "Msh"],
-    "changetime" : 600
+    "changetime" : 600,
     "textChannelName" : "stopflood",
     "voiceChannelName" : "AFK",
     "aliasesFile" : "aliases.json"
