update config example

--- a/config.inc.json
+++ b/config.inc.json
@@ -7,5 +7,6 @@
     "changetime" : 600,
     "textChannelName" : "stopflood",
     "voiceChannelName" : "AFK",
-    "aliasesFile" : "aliases.json"
+    "aliasesFile" : "aliases.json",
+    "ytapikey" : "XXXXXXXXXXXXXXXXXXXXXXXXXXXXX"
 }
