Refactoring Changes in logic Dockerimage update Nodejs 6->10

--- a/config.inc.json
+++ b/config.inc.json
@@ -3,10 +3,6 @@
     "serverName" : "FOnline2",
     "serverport" : "4000",
     "serverhost" : "game.fonline2.com",
-    "nicknames" : ["Pti4ka", "Mabus", "T-888", "Msh"],
-    "changetime" : 600,
-    "textChannelName" : "stopflood",
-    "voiceChannelName" : "AFK",
-    "aliasesFile" : "aliases.json",
-    "ytapikey" : "XXXXXXXXXXXXXXXXXXXXXXXXXXXXX"
+    "nfswRole" : "FreeTalker",
+    "authorizedRoles" : ["Administrators","Moderator"]
 }
