Fix. Removed faction jokes

--- a/config.inc.json
+++ b/config.inc.json
@@ -4,6 +4,5 @@
     "serverport" : "4000",
     "serverhost" : "game.fonline2.com",
     "nsfwRole" : "FreeTalker",
-    "authorizedRoles" : ["Administrators","Moderator"],
-    "botusername" : ["Roza"]
+    "authorizedRoles" : ["Administrators","Moderator"]
 }
